--- a/styles/style.css
+++ b/styles/style.css
@@ -7,3 +7,13 @@
     box-sizing: border-box;
 }
 
+section{
+    position: relative;
+    width: 100%;
+    min-height: 100vh;
+    padding: 100px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background: #fff;
+}
