feat: styled img

--- a/styles/style.css
+++ b/styles/style.css
@@ -10,7 +10,7 @@
 section{
     position: relative;
     width: 100%;
-    min-height: 100vh;
+    max-height: 100vh;
     padding: 100px;
     display: flex;
     justify-content: space-between;
@@ -56,6 +56,7 @@ header ul li a{
 }
 .content .textBox{
     position: relative;
+    max-width: 600px;
 }
 .content .textBox h2{
     color: #333;
@@ -81,4 +82,14 @@ header ul li a{
     font-weight: 500;
     letter-spacing: 1px;
     text-decoration: none;
+}
+.content .imgBox{
+    width: 600px; 
+    display: flex;
+    justify-content: flex-end;
+    padding-right: 50px;
+    margin-top: 50px;
+}
+.content .imgBox img{
+    max-width: 340px;
 }
