--- a/styles/style.css
+++ b/styles/style.css
@@ -93,3 +93,10 @@ header ul li a{
 .content .imgBox img{
     max-width: 340px;
 }
+.thumb{
+    position: absolute;
+    left: 50%;
+    bottom: 20px;
+    transform: translateX(-50%);
+    display: flex;
+}
