--- a/styles/style.css
+++ b/styles/style.css
@@ -100,3 +100,16 @@ header ul li a{
     transform: translateX(-50%);
     display: flex;
 }
+.thumb li{
+    list-style: none;
+    display: inline-block;
+    margin: 0 20px;
+    cursor: pointer;
+    transition: 0.5s;
+}
+.thumb li:hover{
+    transform: translateY(-15px);
+}
+.thumb li img{
+    max-width: 60px;
+}
