--- a/styles/style.css
+++ b/styles/style.css
@@ -132,3 +132,12 @@ header ul li a{
     margin: 5px 0;
     transform: scale(0.6);
 }
+
+.circle{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: #017143;
+}
