--- a/styles/style.css
+++ b/styles/style.css
@@ -142,3 +142,50 @@ header ul li a{
     background: #017143;
     clip-path: circle(600px at right 800px);
 }
+@media (max-width: 991px){
+    hedaer{
+        padding: 20px;
+    }
+    header .logo{
+        max-width: 60px;
+    }
+    header ul{
+        display: none;
+    }
+    section {
+        padding: 20px 20px 120px;
+        max-height: none;
+    }
+    .content{
+        flex-direction: column;
+        margin-top: 100px;
+    }
+    .content .textBox h2{
+        font-size: 2.5em;
+        margin-bottom: 15px;
+    }
+    .content .textBox {
+        max-width: 100%;
+    }
+    .content .imgBox{
+        max-width: 100%;
+        justify-content: center;
+    }
+    .content .imgBox img{
+        max-width: 300px;
+    }
+    .thumb li img{
+        max-width: 40px;
+    }
+    .circle{
+        clip-path: circle(400px at center bottom);
+        padding-bottom: 100px;
+    }
+    .sci{
+        position: absolute;
+        background: #017143;
+        right: 0;
+        width: 50px;
+        border-radius: 5px
+    }
+}
